INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/module/tinyxml/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/module/timer/)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/module/common/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/module/thread/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/module/log/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/module/sqlparse/)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/module/tinyxml/ MODULE_SRCS) 
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/module/timer/ MODULE_SRCS) 
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/module/log/ MODULE_SRCS) 
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/module/thread/ MODULE_SRCS) 
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/module/common/ MODULE_SRCS) 
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/module/sqlparse/ MODULE_SRCS) 

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib/)

ADD_EXECUTABLE(module ${DIR_SRCS} ${MODULE_SRCS}  
)
TARGET_LINK_LIBRARIES( module -lpthread ) 
